# web-skill

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
script/: install.sh
scripts/: install.sh
skill/: SKILL.md
skill/references/video-transcript/: README.md  SKILL.md
skill/references/video-transcript/scripts/: bilibili.py  transcript.py
skill/tools/: video-transcript.md  xiaohongshu.md
skill/tools/scripts/: stt.py
skill/tools/video-transcript/: video-transcript.md
tests/: _common.py  test_bilibili.py  test_recommend.py  test_scripts.py  test_transcript.py  test_video_transcript.py
web_skill/: __init__.py  cli.py  doctor.py  opencli.py  probe.py  skillreg.py
web_skill/channels/: __init__.py  base.py  reddit.py  twitter.py  video_transcript.py  xiaohongshu.py
web_skill/skill/: SKILL.md
web_skill/skill/scripts/: recommend.py  stt.py  transcript.py
web_skill/skill/tools/: opencli.md  recommend.md  reddit.md  twitter.md  video-transcript.md  xiaohongshu.md
