[project]
name = "web-skill"
version = "0.1.0"
description = "On-device tools for AI agents (video transcripts, Xiaohongshu, …), packaged as a Claude Code skill."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # CLI is stdlib-only; per-tool deps install via brew / uv tool / PEP 723

[project.scripts]
web-skill = "web_skill.cli:main"

[project.urls]
Repository = "https://github.com/ophis/web-skill"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_skill"]
# skill/ docs + scripts under the package are bundled automatically.
